--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -90,7 +90,7 @@
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="官网"/>
+                    android:text="作者"/>
 
                 <TextView
                     android:id="@+id/linkweb"
@@ -99,7 +99,7 @@
                     android:layout_weight="3"
                     android:gravity="right"
                     android:autoLink="web"
-                    android:text="tsms.allmything.com"
+                    android:text="SJTU WL LYM CJL"
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -117,7 +117,7 @@
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="用户交流群" />
+                    android:text="作品介绍" />
 
                 <TextView
                     android:textSize="18sp"
@@ -128,7 +128,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="right"
                     android:textIsSelectable="true"
-                    android:text="793283514" />
+                    android:text="计算机网络课程作业" />
 
             </LinearLayout>
 
