--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -3,8 +3,13 @@
     <string-array name="add_sender_menu">
         <item >转发到钉钉</item>
         <item >转发到邮箱</item>
-        <item >转发到—</item>
+        //start
+        <item >转发到pushplus</item>
+        //end
         <item >转发到网页</item>
         <item >转发到企业微信群机器人</item>
+        //start
+        <item >转发到socket</item>
+        //end
     </string-array>
 </resources>
