--- a/app/src/main/res/layout/tlog_item.xml
+++ b/app/src/main/res/layout/tlog_item.xml
@@ -18,14 +18,15 @@
             android:textColor="@android:color/black"
             android:textColorHighlight="@android:color/holo_red_dark"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="10dp" />
+            android:layout_marginStart="10dp"/>
 
         <TextView
             android:id="@+id/tlog_rule"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginStart="10dp" />
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="35dp"/>
         <ImageView
             android:id="@+id/tlog_sender_image"
             android:layout_width="24dp"
@@ -39,5 +40,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="-25dp"/>
 </LinearLayout>
