fix:1.修复了socket闪退问题 2.修正了成员名 3.解决了socket版本无法编译的问题

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -99,7 +99,7 @@
                     android:layout_weight="3"
                     android:gravity="right"
                     android:autoLink="web"
-                    android:text="SJTU WL LYM CJL"
+                    android:text="SJTU WL LYM ZJL"
                     android:textSize="18sp" />
             </LinearLayout>
 
